--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginTop="4dp"
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
