In progress: Layout Menu FIREBASE
Done:
Gradle settings + Manifest
include binding
API
DATABASE
NAV GRAPH

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,7 +23,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/detailPlayNowBTN"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
