--- a/app/src/main/res/layout/giveaway_item.xml
+++ b/app/src/main/res/layout/giveaway_item.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintStart_toStartOf="@+id/giveawayDescTV"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/getBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
