--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,5 +14,6 @@
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Dashboard" />
+        android:title="Dashboard"
+        android:id="@+id/loginFragment"/>
 </menu>
