--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,4 +28,9 @@
         android:name="com.example.play4free.ui.GiveawayFragment"
         android:label="fragment_giveaway"
         tools:layout="@layout/fragment_giveaway" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.play4free.ui.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" />
 </navigation>
