--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
+        android:hint="Name"
         app:layout_constraintEnd_toEndOf="@+id/loginLogoIV"
         app:layout_constraintStart_toStartOf="@+id/loginLogoIV"
         app:layout_constraintTop_toBottomOf="@+id/loginLogoIV" />
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:hint="Password"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@+id/loginMailET"
@@ -47,7 +48,7 @@
         android:text="Sign In"
         app:layout_constraintEnd_toEndOf="@+id/loginPwET"
         app:layout_constraintStart_toStartOf="@+id/loginPwET"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/loginPwResetTV" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginSignUpBTN"
@@ -60,11 +61,11 @@
         app:layout_constraintTop_toBottomOf="@+id/loginSignInBTN" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/loginPwResetTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Forgot Password?"
         app:layout_constraintEnd_toEndOf="@+id/loginPwET"
         app:layout_constraintTop_toBottomOf="@+id/loginPwET" />
 </androidx.constraintlayout.widget.ConstraintLayout>
