In progress: Layout Menu FIREBASE DIALOG
Done:
Gradle settings + Manifest
include binding
API
DATABASE
NAV GRAPH

--- a/app/src/main/res/layout/giveaway_item.xml
+++ b/app/src/main/res/layout/giveaway_item.xml
@@ -24,9 +24,9 @@
                 android:id="@+id/giveawayIV"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:foreground="@color/white2"
+                android:foreground="@color/whiteAlpha"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
