--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -2,87 +2,107 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/blackAlpha"
+    >
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signUpUsernameET"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/materialCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signUpEmailET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/signUpUsernameET"
-        app:layout_constraintStart_toStartOf="@+id/signUpUsernameET"
-        app:layout_constraintTop_toBottomOf="@+id/signUpUsernameET" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signUpDateET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="DD.MM.YYYY"
-        android:inputType="date"
-        app:layout_constraintEnd_toEndOf="@+id/signUpEmailET"
-        app:layout_constraintStart_toStartOf="@+id/signUpEmailET"
-        app:layout_constraintTop_toBottomOf="@+id/signUpEmailET" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signUpUsernameET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:hint="Username"
+                android:inputType="text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signUpPwET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/signUpDateET"
-        app:layout_constraintStart_toStartOf="@+id/signUpDateET"
-        app:layout_constraintTop_toBottomOf="@+id/signUpDateET" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signUpEmailET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                app:layout_constraintEnd_toEndOf="@+id/signUpUsernameET"
+                app:layout_constraintStart_toStartOf="@+id/signUpUsernameET"
+                app:layout_constraintTop_toBottomOf="@+id/signUpUsernameET" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signUpPwSecET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Repeat Password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/signUpPwET"
-        app:layout_constraintStart_toStartOf="@+id/signUpPwET"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPwET" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signUpDateET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="DD.MM.YYYY"
+                android:inputType="date"
+                app:layout_constraintEnd_toEndOf="@+id/signUpEmailET"
+                app:layout_constraintStart_toStartOf="@+id/signUpEmailET"
+                app:layout_constraintTop_toBottomOf="@+id/signUpEmailET" />
 
-    <Button
-        android:id="@+id/signUpCreateBTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="24dp"
-        android:text="Create Account"
-        app:layout_constraintEnd_toEndOf="@+id/signUpPwSecET"
-        app:layout_constraintStart_toEndOf="@+id/signUpAbortBTN"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPwSecET" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signUpPwET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                app:layout_constraintEnd_toEndOf="@+id/signUpDateET"
+                app:layout_constraintStart_toStartOf="@+id/signUpDateET"
+                app:layout_constraintTop_toBottomOf="@+id/signUpDateET" />
 
-    <Button
-        android:id="@+id/signUpAbortBTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Cancle"
-        app:layout_constraintEnd_toStartOf="@+id/signUpPwSecET"
-        app:layout_constraintStart_toStartOf="@+id/signUpPwSecET"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPwSecET" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signUpPwSecET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Repeat Password"
+                android:inputType="textPassword"
+                app:layout_constraintEnd_toEndOf="@+id/signUpPwET"
+                app:layout_constraintStart_toStartOf="@+id/signUpPwET"
+                app:layout_constraintTop_toBottomOf="@+id/signUpPwET" />
+
+            <Button
+                android:id="@+id/signUpCreateBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="24dp"
+                android:text="Create Account"
+                app:layout_constraintEnd_toEndOf="@+id/signUpPwSecET"
+                app:layout_constraintStart_toEndOf="@+id/signUpAbortBTN"
+                app:layout_constraintTop_toBottomOf="@+id/signUpPwSecET" />
+
+            <Button
+                android:id="@+id/signUpAbortBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Cancle"
+                app:layout_constraintEnd_toStartOf="@+id/signUpPwSecET"
+                app:layout_constraintStart_toStartOf="@+id/signUpPwSecET"
+                app:layout_constraintTop_toBottomOf="@+id/signUpPwSecET" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
